--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.1.0",
         "@testing-library/user-event": "^14.5.1",
+        "@types/dotenv-webpack": "^7.0.7",
         "@types/jest": "^29.5.8",
         "@types/node": "^20.8.9",
         "@types/react": "^18.2.33",
@@ -32,6 +33,7 @@
         "@typescript-eslint/eslint-plugin": "^6.9.0",
         "@typescript-eslint/parser": "^6.9.0",
         "css-loader": "^6.8.1",
+        "dotenv-webpack": "^8.1.0",
         "eslint": "^8.52.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.0",
