feat: add theming

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,8 @@
 name: 'deploy front'
 on:
-  pull_request:
-    branches: [ develop ]
+  create:
+    branches:
+      - 'releases/**'
 
 jobs:
   pipeline:
