--- a/argocd/deployment.yaml
+++ b/argocd/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: front-container
-        image: hapsy/webportal-front:test-latest
+        image: hapsy/webportal-front:pr-7
         ports:
         - containerPort: 80
