--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -53,9 +53,10 @@ jobs:
           hapsy/webportal-front:latest
           hapsy/webportal-front:test-latest
         labels: ${{ steps.meta.outputs.labels }},
-    - name: Modify README.md
-      uses: jaywcjlove/github-action-modify-file-content@main
+    - name: Update values.yaml
+      uses: fjogeleit/yaml-update-action@main
       with:
-        path: argocd/deployment.yaml
-        body: "pr-${{ github.event.number }}"
-        overwrite: 'true'
+        valueFile: 'argocd/deployment.yaml'
+        propertyPath: 'spec.template.spec.containers[name=front-container].image'
+        value: hapsy/webportal-front:pr-${{ github.event.number }}
+        commitChange: false
