--- a/argocd/deployment.yaml
+++ b/argocd/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: front-container
-        image: hapsy/webportal-front:<!--GAMFC-->latest<!--GAMFC-END-->
+        image: hapsy/webportal-front:latest
         ports:
         - containerPort: 80
