--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -16,10 +16,9 @@ jobs:
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: 'argocd/deployment.yaml'
-        propertyPath: 'spec.template.spec.containers[0].image'
+        propertyPath: 'spec.template.spec.containers.0.image'
         value: hapsy/webportal-front:pr-${{ github.event.number }}
         commitChange: false
-        branch: develop
     - name: Starting Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
