--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -19,13 +19,10 @@ jobs:
         propertyPath: 'spec.template.spec.containers.0.image'
         value: hapsy/webportal-front:pr-${{ github.event.number }}
         commitChange: false
-    - name: Commit changes
-      uses: EndBug/add-and-commit@v9
+    - name: Commit & Push changes
+      uses: actions-js/push@master
       with:
-        author_name: Your Name
-        author_email: mail@example.com
-        message: 'Your commit message'
-        push: true
+        github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Starting Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
