--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -23,7 +23,7 @@ jobs:
       uses: actions-js/push@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: develop
+        branch: ${{ github.ref_name }}
     - name: Starting Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
