--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
       with:
-        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+        # persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0             # otherwise, you will fail to push refs to dest repo
     - name: Update yaml
       uses: fjogeleit/yaml-update-action@main
