--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: actions-js/push@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref_name }}
+        branch: features/test-8
     - name: Starting Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
