feat: argocd test

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,11 @@
 name: 'deploy front release'
+
 on:
-  create:
+  push:
     branches:
-      - 'releases/**'
+      - 'release/**'
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   pipeline:
