--- a/argocd/prod/deployment.yaml
+++ b/argocd/prod/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: front-test-deployment
+  name: front-deployment
   labels:
-    app: my-app-test
+    app: my-app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: my-app-test
+      app: my-app
   template:
     metadata:
       labels:
-        app: my-app-test
+        app: my-app
     spec:
       containers:
         - name: front-container
-          image: hapsy/webportal-front:pr-18
+          image: hapsy/webportal-front:latest
           ports:
             - containerPort: 80
