--- a/package.json
+++ b/package.json
@@ -65,8 +65,12 @@
     },
     "dependencies": {
         "clsx": "^2.1.1",
+        "i18next": "^23.11.4",
+        "i18next-browser-languagedetector": "^8.0.0",
+        "i18next-http-backend": "^2.5.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^14.1.1",
         "react-router-dom": "^6.23.0"
     }
 }
