--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,4 +5,8 @@ server {
     index  index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
+
+  location /locales {
+    try_files /app/public/$request_uri =404;
+  }
 }
