feat: add error boundary

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,6 @@ server {
   }
 
   location /locales {
-    try_files /app/public/$request_uri =404;
+    try_files /usr/share/nginx/static/$request_uri =404;
   }
 }
