feat: обновлен бандл аналайзер и nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,8 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 
-  location /locales {
-    try_files /usr/share/nginx/static/$request_uri =404;
+  location ~ ^/locales {
+    root /usr/share/nginx/static/;
+    try_files $uri =404;
   }
 }
