--- a/package.json
+++ b/package.json
@@ -13,13 +13,28 @@
         "lint:ts": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\"",
         "lint:ts:fix": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
         "lint:styles": "stylelint \"**/*.{scss,css}\"",
-        "test:unit": "jest -c ./config/jest/jest.config.ts"
+        "test:unit": "jest -c ./config/jest/jest.config.ts",
+        "storybook": "storybook dev -p 6006 -c ./config/storybook",
+        "build-storybook": "storybook build"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/preset-env": "^7.23.3",
+        "@babel/preset-react": "^7.23.3",
+        "@babel/preset-typescript": "^7.23.3",
+        "@chromatic-com/storybook": "^1.5.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+        "@storybook/addon-essentials": "^8.1.4",
+        "@storybook/addon-interactions": "^8.1.4",
+        "@storybook/addon-links": "^8.1.4",
+        "@storybook/addon-onboarding": "^8.1.4",
+        "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+        "@storybook/blocks": "^8.1.4",
+        "@storybook/react": "^8.1.4",
+        "@storybook/react-webpack5": "^8.1.4",
+        "@storybook/test": "^8.1.4",
         "@svgr/webpack": "^8.1.0",
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.1.0",
@@ -39,6 +54,7 @@
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-storybook": "^0.8.0",
         "html-webpack-plugin": "^5.5.3",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
@@ -49,6 +65,7 @@
         "react-refresh-typescript": "^2.0.9",
         "sass": "^1.69.5",
         "sass-loader": "^13.3.2",
+        "storybook": "^8.1.4",
         "style-loader": "^3.3.3",
         "stylelint": "^15.11.0",
         "stylelint-config-standard": "^34.0.0",
