--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install
-      run: npm ci
+      run: npm ci --legacy-peer-deps
     - name: 'Create .env file'
       run: |
         echo "${{ secrets.ENV_FILE }}" > .env
