--- a/package.json
+++ b/package.json
@@ -1,93 +1,109 @@
 {
-    "name": "webportal",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "bundle:analyze": "webpack --env mode=production --env analyze=true",
-        "start": "webpack serve --env mode=development --env port=3000",
-        "build:dev": "webpack --env mode=development",
-        "build:prod": "webpack --env mode=production",
-        "format:src": "prettier --write \"src/**/*\"",
-        "format:all": "prettier --write .",
-        "lint:ts": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\"",
-        "lint:ts:fix": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
-        "lint:styles": "stylelint \"**/*.{scss,css}\"",
-        "test:unit": "jest -c ./config/jest/jest.config.ts",
-        "storybook": "storybook dev -p 6006 -c ./config/storybook",
-        "build-storybook": "storybook build"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/preset-env": "^7.23.3",
-        "@babel/preset-react": "^7.23.3",
-        "@babel/preset-typescript": "^7.23.3",
-        "@chromatic-com/storybook": "^1.5.0",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-        "@storybook/addon-essentials": "^8.1.4",
-        "@storybook/addon-interactions": "^8.1.4",
-        "@storybook/addon-links": "^8.1.4",
-        "@storybook/addon-onboarding": "^8.1.4",
-        "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-        "@storybook/blocks": "^8.1.4",
-        "@storybook/react": "^8.1.4",
-        "@storybook/react-webpack5": "^8.1.4",
-        "@storybook/test": "^8.1.4",
-        "@svgr/webpack": "^8.1.0",
-        "@testing-library/jest-dom": "^6.1.4",
-        "@testing-library/react": "^14.1.0",
-        "@testing-library/user-event": "^14.5.1",
-        "@types/dotenv-webpack": "^7.0.7",
-        "@types/jest": "^29.5.8",
-        "@types/node": "^20.8.9",
-        "@types/react": "^18.2.33",
-        "@types/react-dom": "^18.2.14",
-        "@types/webpack-bundle-analyzer": "^4.7.0",
-        "@typescript-eslint/eslint-plugin": "^6.9.0",
-        "@typescript-eslint/parser": "^6.9.0",
-        "css-loader": "^6.8.1",
-        "dotenv-webpack": "^8.1.0",
-        "eslint": "^8.52.0",
-        "eslint-import-resolver-typescript": "^3.6.1",
-        "eslint-plugin-import": "^2.29.0",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-react": "^7.33.2",
-        "eslint-plugin-storybook": "^0.8.0",
-        "html-webpack-plugin": "^5.5.3",
-        "identity-obj-proxy": "^3.0.0",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "mini-css-extract-plugin": "^2.7.6",
-        "prettier": "3.0.3",
-        "react-refresh": "^0.14.0",
-        "react-refresh-typescript": "^2.0.9",
-        "sass": "^1.69.5",
-        "sass-loader": "^13.3.2",
-        "storybook": "^8.1.4",
-        "style-loader": "^3.3.3",
-        "stylelint": "^15.11.0",
-        "stylelint-config-standard": "^34.0.0",
-        "stylelint-config-standard-scss": "^11.0.0",
-        "ts-jest": "^29.1.1",
-        "ts-loader": "^9.5.0",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.2.2",
-        "typescript-plugin-css-modules": "^5.0.2",
-        "webpack": "^5.89.0",
-        "webpack-bundle-analyzer": "^4.10.2",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1"
-    },
-    "dependencies": {
-        "clsx": "^2.1.1",
-        "i18next": "^23.11.4",
-        "i18next-browser-languagedetector": "^8.0.0",
-        "i18next-http-backend": "^2.5.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-i18next": "^14.1.1",
-        "react-router-dom": "^6.23.0"
+  "name": "webportal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "bundle:analyze": "webpack --env mode=production --env analyze=true",
+    "start": "webpack serve --env mode=development --env port=3000",
+    "build:dev": "webpack --env mode=development",
+    "build:prod": "webpack --env mode=production",
+    "format:src": "prettier --write \"src/**/*\"",
+    "format:all": "prettier --write .",
+    "lint:ts": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\"",
+    "lint:ts:fix": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
+    "lint:styles": "stylelint \"**/*.{scss,css}\"",
+    "test:unit": "jest -c ./config/jest/jest.config.ts",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "build-storybook": "storybook build"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@storybook/addon-essentials": "^8.1.4",
+    "@storybook/addon-interactions": "^8.1.4",
+    "@storybook/addon-links": "^8.1.4",
+    "@storybook/addon-onboarding": "^8.1.4",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/blocks": "^8.1.4",
+    "@storybook/react": "^8.1.4",
+    "@storybook/react-webpack5": "^8.1.4",
+    "@storybook/test": "^8.1.4",
+    "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/dotenv-webpack": "^7.0.7",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.1.0",
+    "eslint": "^8.52.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-storybook": "^0.8.0",
+    "html-webpack-plugin": "^5.5.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "loki": "^0.35.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "3.0.3",
+    "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.9",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "storybook": "^8.1.4",
+    "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.0.2",
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
+    "react-router-dom": "^6.23.0"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
     }
+  }
 }
