--- a/argocd/test/deployment.yaml
+++ b/argocd/test/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: front-container
-          image: hapsy/webportal-front:pr-30
+          image: dockerhub.timeweb.cloud/hapsy/webportal-front:pr-30
           ports:
             - containerPort: 80
