--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,1 +1,4 @@
-{ "extends": ["stylelint-config-standard", "stylelint-config-standard-scss"] }
+{
+    "extends": ["stylelint-config-standard", "stylelint-config-standard-scss"],
+    "ignoreFiles": ["build/**/*"]
+}
