--- a/argocd/prod/deployment.yaml
+++ b/argocd/prod/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: front-container
-          image: hapsy/webportal-front:v0.1-alpha
+          image: dockerhub.timeweb.cloud/hapsy/webportal-front:v0.1-alpha
           ports:
             - containerPort: 80
