--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "test:ui": "loki test",
         "test:ui:approve": "loki test approve",
         "storybook": "storybook dev -p 6006 -c ./config/storybook",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "visual:report": "npm-run-all visual:report:*",
+        "visual:report:json": "ts-node scripts/generate-visual-json-report.ts",
+        "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html"
     },
     "keywords": [],
     "author": "",
@@ -63,9 +66,11 @@
         "jest-environment-jsdom": "^29.7.0",
         "loki": "^0.35.0",
         "mini-css-extract-plugin": "^2.7.6",
+        "npm-run-all": "^4.1.5",
         "prettier": "3.0.3",
         "react-refresh": "^0.14.0",
         "react-refresh-typescript": "^2.0.9",
+        "reg-cli": "^0.18.1",
         "sass": "^1.69.5",
         "sass-loader": "^13.3.2",
         "storybook": "^8.1.4",
