--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "webpack-dev-server": "^4.15.1"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.5",
         "clsx": "^2.1.1",
         "i18next": "^23.11.4",
         "i18next-browser-languagedetector": "^8.0.0",
@@ -96,6 +97,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.1.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.0"
     },
     "loki": {
