--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "typescript.tsdk": "node_modules/typescript/lib",
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "i18n-ally.localesPaths": ["public/locales", "src/shared/libs/i18n"]
+    "i18n-ally.localesPaths": ["public/locales", "src/shared/libs/i18n"],
+    "i18n-ally.keystyle": "nested"
 }
