feat: добалена логика регистрации, логина

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "i18next": "^23.11.4",
     "i18next-browser-languagedetector": "^8.0.0",
