--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "bundle:analyze": "webpack --env mode=production --env analyze=true",
     "start": "webpack serve --env mode=development --env port=3000",
+    "start:stub": "node --watch json-server/index.js",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "format:src": "prettier --write \"src/**/*\"",
@@ -66,6 +67,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "json-server": "^0.17.4",
     "loki": "^0.35.0",
     "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
